--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,12 +31,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/x_Sec_ProyectoIntegrador.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.javax.mail-1.6.2.jar=/Users/alejandrocruz/Downloads/jar_files-3/javax.mail-1.6.2.jar
 file.reference.mysql-connector-java-8.0.11.jar=driver/mysql-connector-java-8.0.11.jar
 file.reference.ud5-tarea-2-proyecto-integrador-1-elsupergrupo-src=src
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.11.jar}
+    ${file.reference.mysql-connector-java-8.0.11.jar}:\
+    ${file.reference.javax.mail-1.6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
