--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,12 +1,13 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;file=driver/mysql-connector-java-8.0.11.jar;output=bin;
+application.title=x_Sec_ProyectoIntegrador
+application.vendor=alejandrocruz
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;file=driver/mysql-connector-java-8.0.11.jar;file=driver/javax.jar;file=driver/javax.mail-1.6.2.jar;output=bin;
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=.
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1580211378000
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1581931261000
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.workspace=/Users/alejandrocruz/eclipse-workspace
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -30,15 +31,20 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/x_Sec_ProyectoIntegrador.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.javax.jar=driver/javax.jar
 file.reference.javax.mail-1.6.2.jar=/Users/alejandrocruz/Downloads/jar_files-3/javax.mail-1.6.2.jar
+file.reference.javax.mail-1.6.2.jar-1=driver/javax.mail-1.6.2.jar
 file.reference.mysql-connector-java-8.0.11.jar=driver/mysql-connector-java-8.0.11.jar
 file.reference.ud5-tarea-2-proyecto-integrador-1-elsupergrupo-src=src
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.11.jar}:\
-    ${file.reference.javax.mail-1.6.2.jar}
+    ${file.reference.javax.mail-1.6.2.jar}:\
+    ${file.reference.javax.mail-1.6.2.jar-1}:\
+    ${file.reference.javax.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -72,7 +78,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=-Djava.net.preferIPv4Stack=true
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
